--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "texada-tech-challenge",
+  "name": "react-tech-challenge",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
