--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.3",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bluebird": "^3.7.2",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "moment": "^2.24.0",
